# muninn

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
muninn/: agents.py  app.py  bootstrap.py  commands.py  egress.py  jsonl_log.py  screens.py  stacks.py  streaming.py  themes.py  tools.py  workflows.py
tests/: conftest.py  test_agents.py  test_app_pilot.py  test_bootstrap.py  test_egress.py  test_install_sh.py  test_stacks.py  test_themes.py  test_tools.py  test_workflows.py
